Task2/k8s-manifests/service-loadbalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: juice-shop-service
spec:
  selector:
    run: juice-shop
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
